# audioclient_win32

./: .gitignore  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
.cache/clangd/index/: portaudio_impl3_linux.cpp.A81B9FCAAD0F8F4F.idx
junks/: create_audio.cpp  create_audio.h  gsMain.cpp  junks.txt  main.cpp  snd_file_listen.cpp  snd_port.cpp  snd_read.cpp  wav_original.cpp
linux/: portaudio_impl3_linux.cpp
windows/: portaudio_impl.cpp  portaudio_impl2.cpp  portaudio_impl3_clean.cpp
